--- a/src/_includes/post.html
+++ b/src/_includes/post.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="alternate" type="application/rss+xml" href="/feed.xml" title="Your Site RSS Feed" />
 
     <title>{{title}}</title>
 </head>
