--- a/css/style.css
+++ b/css/style.css
@@ -1,27 +1,34 @@
-body {
-    font-family: 'Arial', sans-serif;
+html, body {
+    height: 100%;
     margin: 0;
     padding: 0;
-  }
-  
-  header {
+    font-family: 'Arial', sans-serif;
+    display: flex;
+    flex-direction: column;
+}
+
+header {
     background-color: #333;
     color: white;
     padding: 1em;
     text-align: center;
-  }
-  
-  main {
+}
+
+main {
     max-width: 800px;
     margin: 0 auto;
     padding: 1em;
-  }
-  
-  footer {
+    flex: 1 0 auto;
+}
+
+footer {
     text-align: center;
     padding: 1em;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-  }
-  
+    flex-shrink: 0;
+}
+
+img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+} 
