--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,9 @@
-html, body {
+html,
+body {
     height: 100%;
     margin: 0;
     padding: 0;
-    font-family: 'Arial', sans-serif;
+    font-family: serif;
     display: flex;
     flex-direction: column;
 }
@@ -28,7 +29,7 @@ footer {
 }
 
 img {
-  width: 100%;
-  height: auto;
-  object-fit: cover;
-} 
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+}
