--- a/src/_includes/post.html
+++ b/src/_includes/post.html
@@ -1,27 +1,41 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="/css/style.css" />
+        <link
+            rel="alternate"
+            type="application/rss+xml"
+            href="/feed.xml"
+            title="RSS Feed"
+        />
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="alternate" type="application/rss+xml" href="/feed.xml" title="Your Site RSS Feed" />
-
-    <title>{{title}}</title>
-</head>
-
-<body>
-    <main>
-        <h1>{{title}}</h1>
-        <p>{{ date | date: "%Y %B %d" }}</p>
-        {{ content }}
-        <br>
-    <a href="/">Back to website</a>
-    </main>
-    <footer>
-        by snats
-	<p>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
-    </footer>
-</body>
-
+        <title>{{title}}</title>
+    </head>
+    <script
+        data-goatcounter="https://weblogsnats.goatcounter.com/count"
+        async
+        src="//gc.zgo.at/count.js"
+    ></script>
+    <body>
+        <main>
+            <h1>{{title}}</h1>
+            <p>{{ date | date: "%Y %B %d" }}</p>
+            {{ content }}
+            <br />
+            <a href="/">Back to website</a>
+        </main>
+        <footer>
+            by snats
+            <p>
+                This work is licensed under a
+                <a
+                    rel="license"
+                    href="http://creativecommons.org/licenses/by/4.0/"
+                    >Creative Commons Attribution 4.0 International License</a
+                >.
+            </p>
+        </footer>
+    </body>
 </html>
